@@ -2056,6 +2056,7 @@ int	_conf_set(ConfigFile *conf, ConfigEntry *ce)
 				}
 			}
 		}
+#ifndef OLD_CLOAK
 		else if (!strcmp(cep->ce_varname, "cloak-keys"))
 		{
 			/* Count number of numbers there .. */
@@ -2075,6 +2076,7 @@ int	_conf_set(ConfigFile *conf, ConfigEntry *ce)
 				CLOAK_KEY2, CLOAK_KEY3);
 			CLOAK_KEYCRC = (long) crc32(temp, strlen(temp));
 		}
+#endif
 		else
 		{
 			config_status("%s:%i: unknown directive set::%s",
@@ -2725,7 +2727,7 @@ void	validate_configuration(void)
 		Warning("set::socks::quit-message is missing. Using default of \"Insecure SOCKS server\"");
 		ircstrdup(iConf.socksquitmessage, "Insecure SOCKS server");
 	}
-	
+#ifndef OLD_CLOAK	
 	if ((CLOAK_KEY1 < 10000) || (CLOAK_KEY2 < 10000) || (CLOAK_KEY3 < 10000))
 	{
 		if (!CLOAK_KEY1 || !CLOAK_KEY2 || !CLOAK_KEY3)
@@ -2737,6 +2739,7 @@ void	validate_configuration(void)
 		}
 		Error("set::cloak-keys are too easy to guess. Please select three other more absurd and crazy numbers - will increase security a lot");
 	}
+#endif
 	/* Now for the real config */
 	if (conf_me)
 	{
